@@ -5,7 +5,7 @@ lots = Lots
 flow = Flow
 ruler = Ruler
 manual = Manual
-auto = Auto
+matchLeakage = Match Leakage
 measuringTape = Measuring Tape
 hose = Hose
 waterTower = Water Tower
