@@ -1,3 +1,5 @@
+Renamed "auto" to "match leakage"
+In "match leakage", hide the manual slider
 Added internationalization
 # 0.00.09 (48472) Feb 1, 2011
 Improved the default locations for the pressure and velocity sensors in the water tower tab
